--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,6 +2,10 @@
   "name": "StoreFlex Lite",
   "short_name": "StoreFlex",
   "description": "Inventory Management System",
+  "start_url": "/",
+  "display": "standalone",
+  "background_color": "#ffffff",
+  "theme_color": "#2563eb",
   "icons": [
     {
       "src": "https://i.postimg.cc/tCKbfghT/logo-3-1.png",
@@ -13,10 +17,5 @@
       "sizes": "512x512",
       "type": "image/png"
     }
-  ],
-  "theme_color": "#ffffff",
-  "background_color": "#ffffff",
-  "start_url": "/",
-  "display": "standalone",
-  "orientation": "portrait"
+  ]
 }
