--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "next": "15.3.3",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
+    "react-barcode": "^1.5.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
