--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,8 +4,8 @@
   "description": "Inventory Management System",
   "start_url": "/",
   "display": "standalone",
-  "background_color": "#ffffff",
-  "theme_color": "#2563eb",
+  "background_color": "#E8F3FF",
+  "theme_color": "#4A90E2",
   "icons": [
     {
       "src": "https://i.postimg.cc/tCKbfghT/logo-3-1.png",
